; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_http_chunks.c_Curl_httpchunk_init.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_http_chunks.c_Curl_httpchunk_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.connectdata = type { %struct.Curl_chunker }
%struct.Curl_chunker = type { i32, i64, i64 }

@CHUNK_HEX = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Curl_httpchunk_init(%struct.connectdata* %0) #0 {
  %2 = alloca %struct.connectdata*, align 8
  %3 = alloca %struct.Curl_chunker*, align 8
  store %struct.connectdata* %0, %struct.connectdata** %2, align 8
  %4 = load %struct.connectdata*, %struct.connectdata** %2, align 8
  %5 = getelementptr inbounds %struct.connectdata, %struct.connectdata* %4, i32 0, i32 0
  store %struct.Curl_chunker* %5, %struct.Curl_chunker** %3, align 8
  %6 = load %struct.Curl_chunker*, %struct.Curl_chunker** %3, align 8
  %7 = getelementptr inbounds %struct.Curl_chunker, %struct.Curl_chunker* %6, i32 0, i32 2
  store i64 0, i64* %7, align 8
  %8 = load %struct.Curl_chunker*, %struct.Curl_chunker** %3, align 8
  %9 = getelementptr inbounds %struct.Curl_chunker, %struct.Curl_chunker* %8, i32 0, i32 1
  store i64 0, i64* %9, align 8
  %10 = load i32, i32* @CHUNK_HEX, align 4
  %11 = load %struct.Curl_chunker*, %struct.Curl_chunker** %3, align 8
  %12 = getelementptr inbounds %struct.Curl_chunker, %struct.Curl_chunker* %11, i32 0, i32 0
  store i32 %10, i32* %12, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
